--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.19.4",
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -20,9 +22,10 @@
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
     "lucide-react": "^0.510.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.2",
+    "razorpay": "^2.9.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.6",
