--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-request": "^7.1.2",
     "lucide-react": "^0.510.0",
     "next": "^15.3.2",
+    "photoswipe": "^5.4.4",
     "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
